# webcam-ergonomics

./: .gitignore  CMakeLists.txt  README.md  notes.txt
config/: settings.json
src/: main.cpp
